--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,9 @@ hr{
 
 }
 
-#header #left-nav-contents{
-    /* border: 2px solid yellow; */
-}
+/* #header #left-nav-contents{
+    border: 2px solid yellow;
+} */
 
 #header img{
     margin: 10px 10px 10px 25px;
@@ -248,7 +248,7 @@ hr{
 
 
 /* MEDIA QUERIES BEGINS HERE */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1023px) {
 
     /* Frequently used Styles on the page */
     
@@ -342,7 +342,7 @@ hr{
 }
 
 
-@media screen and (max-width: 426px){
+@media screen and (min-width: 501px) and (max-width: 768px){
     /* Frequently used Styles on the page */
     
     .sub-sub-heading, .details, hr{
@@ -353,6 +353,151 @@ hr{
         display: flex;
         flex-direction: column;
     }
+
+    /* HEADER QUERIES BEGINS HERE */
+
+    #header #logo-group{
+        /* border: 2px solid green; */
+        display: flex;
+        align-items: center;
+    }
+
+    #header #logo-group #logo{
+        height: 35px;
+        width: 30px;
+        cursor: pointer;
+    }
+
+    #header #logo-group #logo-name{
+        font-size: 1rem;
+    }
+
+    #header #left-nav-contents #header-profile{
+        width: 25px;
+        height: 25px;
+    }
+
+    #notification-bell{
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+    }
+    #left-nav-contents #dropdown{
+        width: 10px;
+        height: 5px;
+        margin-right: 25px;
+        cursor: pointer;
+    }
+
+
+    /* LEFT PANE QUERIES BEGINS HERE */
+
+    #left-pane{
+        /* border: 2px solid blue; */
+        display: flex;
+        flex-direction: column;
+        width: 70%;
+        margin-left: 5%;
+        padding: 15px 0;
+    }
+
+
+    #left-pane #user{
+        /* border: 2px solid green;
+        background-color: yellow; */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /* padding: 20px 55px; */
+    }
+    
+    /* #left-pane #user #circle{
+        background: linear-gradient(to bottom, #3BABC3, #444BAB);
+        border-radius: 100%;
+        width: 200px;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    #left-pane #user #circle #white-circle{
+        border-radius: 100%;
+        width: 195px;
+        height: 195px;
+        background: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    #left-pane #user #circle #user-pic{
+        border-radius: 100%;
+        width: 180px;
+        height: 180px;
+    } */
+    
+    #left-pane #user #user-name-heading{
+        /* border: 2px solid red; */
+        font-family: 'Poppins', sans-serif;
+        color: #263238;
+        font-size: 1.5rem;
+        text-align: center;
+        width: 250px;
+    }
+
+    #user-details img{
+        height: 15px;
+        width: 15px;
+    }
+
+    #user-details a{
+        font-size: 0.9rem;
+    }
+
+    /* RIGHT PANE QUERIES BEGINS HERE */
+
+    #right-pane{
+    /* border: 2px solid purple; */
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 5%;
+    }
+
+    #right-pane > div > h3{
+        text-align: left;
+        font-size: 1rem;
+    }
+
+    #right-pane > div > h4{
+        text-align: left;
+    }
+
+    #right-pane > div > p{
+        text-align: left;
+    }
+
+    #right-pane > div > ul li{
+        text-align: left;
+    }
+
+    #right-pane #moviebazar{
+        font-size: 0.8rem;
+    }
+}
+
+
+@media screen and (max-width: 500px){
+    /* Frequently used Styles on the page */
+
+    .sub-sub-heading, .details, hr{
+        font-size: 0.7rem;
+        line-height: 2.2;
+        letter-spacing: 1;
+    }
+
 
     /* HEADER QUERIES BEGINS HERE */
 
@@ -371,13 +516,13 @@ hr{
     }
 
     #header #logo-group #logo{
-        height: 60px;
-        width: 50px;
+        height: 35px;
+        width: 30px;
         cursor: pointer;
     }
 
     #header #logo-group #logo-name{
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
     
     #header #left-nav-contents{
@@ -386,6 +531,11 @@ hr{
     }
 
 
+    #main-content{
+        display: flex;
+        flex-direction: column;
+    }
+    
 
     /* LEFT PANE QUERIES BEGINS HERE */
 
@@ -454,7 +604,7 @@ hr{
     }
 
     /* RIGHT PANE QUERIES BEGINS HERE */
-
+    
     #right-pane{
     /* border: 2px solid purple; */
     width: 70%;
@@ -465,9 +615,9 @@ hr{
 
     #right-pane > div > h3{
         text-align: left;
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
-
+    
     #right-pane > div > h4{
         text-align: left;
     }
@@ -478,28 +628,6 @@ hr{
 
     #right-pane > div > ul li{
         text-align: left;
-    }
-
-    #right-pane #moviebazar{
-        font-size: 0.8rem;
-    }
-}
-
-
-@media screen and (max-width: 376px){
-    #header #logo-group #logo-name{
-        font-size: 1rem;
-    }
-
-    #right-pane > div > h3{
-        text-align: left;
-        font-size: 0.8rem;
-    }
-
-    .sub-sub-heading, .details, hr{
-        font-size: 0.7rem;
-        line-height: 2.2;
-        letter-spacing: 1;
     }
 
     #right-pane #moviebazar{
